fixed blog injectable index having thumbnails displayed outside an item's card when post descriptions are too short

--- a/stylesheets/_blog_injectable.scss
+++ b/stylesheets/_blog_injectable.scss
@@ -13,6 +13,7 @@
 
     @media (min-width: 991px) {
       position: relative;
+      min-height: 250px;
       h2 {
         margin-right: 2em;
       }
